<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContentRedactorActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="90dp"
                    android:ems="10"
                    android:hint="@string/content_name"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.507"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.32"
                    android:importantForAutofill="no" />

                <Spinner
                    android:id="@+id/contentTypeSpinner"
                    android:layout_width="204dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="90dp"
                    android:layout_marginBottom="10dp"
                    android:height="50dp"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/genres"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="90dp"
                    android:ems="10"
                    android:hint="@string/genres"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:autofillHints="" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="67dp">

                <SeekBar
                    android:id="@+id/font_size"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="90dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/font_size_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/ratingvalue"
                    app:layout_constraintTop_toBottomOf="@+id/font_size"
                    tools:layout_editor_absoluteX="161dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/content_country"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="90dp"
                    android:ems="10"
                    android:hint="@string/country"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/content_watchTime"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="90dp"
                    android:ems="10"
                    android:hint="@string/watch_time_in_min"
                    android:inputType="time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/content_country"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/realeseDate"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="90dp"
                    android:ems="10"
                    android:hint="@string/premiere"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/content_watchTime"
                    android:autofillHints="" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="183dp">

                <EditText
                    android:id="@+id/posterUrl"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="60dp"
                    android:ems="10"
                    android:hint="@string/poster_url"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/trailerUrl"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="60dp"
                    android:ems="10"
                    android:hint="@string/trailer_url"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/posterUrl" />

                <MultiAutoCompleteTextView
                    android:id="@+id/description"
                    android:layout_width="353dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="25dp"
                    android:hint="@string/text_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trailerUrl" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/galleryUrls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:isScrollContainer="false"
                tools:listitem="@layout/redactor_url_item" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>